tests/error/comptime/check_dereference15.bz
function test()
{
	(consteval {
		let s: [: int32];
		{
			let arr: [1: int32];
			s = arr;
		}
		s[0];
	});
}
